[project]
requires-python = ">=3.10"
name = "asgi-logger"
version = "0.1.0"
description = "Middleware based uvicorn access logger! :tada:"
authors = [
    {name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kludex/asgi-logger"
include = ["asgi_logger/py.typed"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "asgiref (>=3.4.1,<4)",
]

[dependency-groups]
dev = [
    "autoflake (>=2.3.0,<3)",
    "black (>=25.9.0,<26)",
    "flake8 (>=7.3.0,<8)",
    "isort (>=7.0.0,<8)",
    "mypy (>=1.18.2,<2)",
    "pre-commit (>=4.3.0,<5)",
    "pytest==6.2.5",
    "pytest-cov==2.10.1",
    "uvicorn==0.15.0",
    "httpx==0.20.0",
    "anyio==3.3.4",
    "trio==0.19.0",
    "pytest-sugar==0.9.4"
]

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
