[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.10"
name = "asgi-logger"
version = "0.1.0"
description = "Middleware based uvicorn access logger! :tada:"
authors = [
    {name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kludex/asgi-logger"
include = ["asgi_logger/py.typed"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "asgiref (>=3.4.1,<4)",
]

[dependency-groups]
dev = [
    "autoflake (>=2.3.0,<3)",
    "black (>=25.9.0,<26)",
    "flake8 (>=7.3.0,<8)",
    "isort (>=7.0.0,<8)",
    "mypy (>=1.18.2,<2)",
    "pre-commit (>=4.3.0,<5)",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "anyio==4.11.0",
    "trio==0.31.0",
    "pytest-sugar==1.1.1",
    "charset-normalizer (>=3.0.0,<4)"
]


[tool.poetry.group.dev]
optional = true


[tool.isort]
profile = "black"
known_first_party = ["asgi_logger"]
multi_line_output = 9


[tool.mypy]
pretty = true
exclude = ["venv", ".venv"]
follow_imports = "skip"


